--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
-PRIVATE_KEY=
-OP_SCAN_API_KEY=
-FTM_SCAN_API_KEY=
-ALCHEMY_API_KEY=
-OPTIMISM_RPC_URL=
+PRIVATE_KEY=0x...
+PUBLIC_KEY=0x...
+
+CHAIN_NAME="Optimism"
+
+GOERLI_RPC_URL="https://opt-goerli.g.alchemy.com/v2/<Enter alchemy optimism goerli api key here>"
+GOERLI_SCAN_API_KEY=
+GOERLI_VERIFIER_URL=https://api-goerli-optimistic.etherscan.io/api
+
+OPTIMISM_RPC_URL="https://opt-mainnet.g.alchemy.com/v2/<Enter alchemy optimism api key here>"
+OPTIMISM_SCAN_API_KEY=
+OPTIMISM_ETHERSCAN_VERIFIER_URL=https://api-optimistic.etherscan.io/api
+
+BLOCK_NUMBER=69000000
