refactor: reduce ve bytecode with library refactor (#253)

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,15 @@
 [profile.default]
 src = 'contracts'
 out = 'artifacts'
+gas_reports = [
+    "VotingEscrow",
+    "Voter",
+    "Gauge",
+    "Minter",
+    "Pair",
+    "RewardsDistributor",
+    "Router"
+]
 
 fs_permissions = [{ access = "read", path = "./"}]
 
