--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-PRIVATE_KEY=0x...
-PUBLIC_KEY=0x...
+PRIVATE_KEY_DEPLOY=0x...
 
-CHAIN_NAME="Optimism"
+CONSTANTS_FILENAME="Optimism.json"
+OUTPUT_FILENAME="Optimism-Test.json"
 
 GOERLI_RPC_URL="https://opt-goerli.g.alchemy.com/v2/<Enter alchemy optimism goerli api key here>"
 GOERLI_SCAN_API_KEY=
-GOERLI_VERIFIER_URL=https://api-goerli-optimistic.etherscan.io/api
+GOERLI_ETHERSCAN_VERIFIER_URL=https://api-goerli-optimistic.etherscan.io/api
 
 OPTIMISM_RPC_URL="https://opt-mainnet.g.alchemy.com/v2/<Enter alchemy optimism api key here>"
 OPTIMISM_SCAN_API_KEY=
 OPTIMISM_ETHERSCAN_VERIFIER_URL=https://api-optimistic.etherscan.io/api
 
-BLOCK_NUMBER=69000000
+FORK_BLOCK_NUMBER=88709600
