--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,7 @@
 	path = lib/gsn
 	url = https://github.com/opengsn/gsn
 	branch = v2.2.5
+[submodule "lib/v3-core"]
+	path = lib/v3-core
+	url = https://github.com/uniswap/v3-core
+	branch = v1.0.0
