--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,53 +1,37 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master, contracts-v2 ]
+    branches: [ contracts-v2 ]
   pull_request:
-    branches: [ master, contracts-v2 ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "test"
   test:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
-      - uses: actions/setup-node@v2
-      - name: Install dev dependencies
-        run: npm install
 
-      # Runs a single command using the runners shell
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
         with:
           version: nightly
 
-      - name: Install deps
-        run: forge install
+      - name: "Build the contracts and print their size"
+        run: |
+          forge --version
+          forge build --sizes
 
       - name: Run tests
-        run: FOUNDRY_PROFILE=ci forge test
+        run: forge test -vvv
         env:
           OPTIMISM_RPC_URL: ${{ secrets.OPTIMISM_RPC_URL }}
           PRIVATE_KEY_DEPLOY: ${{ secrets.PRIVATE_KEY_DEPLOY }}
           CONSTANTS_FILENAME: ${{ secrets.CONSTANTS_FILENAME }}
           OUTPUT_FILENAME: ${{ secrets.OUTPUT_FILENAME }}
           
-        
       - name: slither-static-analysis
         continue-on-error: true
         uses: luisfontes19/slither-static-analysis-action@v0.3.4
