--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,39 +7,19 @@ on:
   pull_request:
 
 jobs:
-    solidity:
-      runs-on: ubuntu-latest
-
-      steps:
-      - name: Check out github repository
-        uses: actions/checkout@v2
+  run-fmt:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v2
         with:
-          fetch-depth: 1
+          submodules: recursive
 
-      - name: Setup node.js
-        uses: actions/setup-node@v1
+      # Runs a single command using the runners shell
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
         with:
-          node-version: '18.x'
+          version: nightly
 
-      - name: Set yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Restore yarn cache
-        uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: |
-            ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-            ${{ runner.os }}-yarn-
-      - name: Install node.js dependencies
-        run: yarn --frozen-lockfile
-
-      - name: Run formater check on *.sol and *.json
-        run: yarn format:check
-
-      # - name: run linter check on *.sol file
-      #   run: yarn lint
+      - name: Format
+        run: forge fmt --check
