refactor: do not hardcode solidity version in files (#385)

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,7 @@
 [profile.default]
 src = 'contracts'
 out = 'out'
+solc_version = '0.8.19'
 
 fs_permissions = [{ access = "read-write", path = "./"}]
 
