--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,9 @@ solc_version = '0.8.25'
 
 fs_permissions = [{ access = "read-write", path = "./"}]
 
+optimizer = true
+optimizer_runs = 200
+
 [rpc_endpoints]
 goerli = "${GOERLI_RPC_URL}"
 optimism = "${OPTIMISM_RPC_URL}"
