--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,8 @@ src = 'contracts'
 out = 'out'
 solc_version = '0.8.25'
 
+no-match-test = "testGas"
+
 fs_permissions = [{ access = "read-write", path = "./"}]
 
 optimizer = true
